<resources>
    <string name="back">Back</string>
    <string name="unexpected_error">Something went wrong</string>
    <string name="no_application_found_for_action">Sorry, no external application has been found to complete this action</string>
    <string name="permission_denied_title_format">%s permission denied</string>
    <string name="permission_denied_message_format">Seem like you denied %1$s permission previously. In order to use this feature please grant %2$s permission in settings.</string>
    <string name="open_settings">Open settings</string>
    <string name="camera">Camera</string>
    <string name="notifications">Notifications</string>
    <string name="name_for_room_invite">Room invite</string>
    <string name="name_for_empty_room">Empty room</string>
    <string name="and">and</string>
    <string name="other">Other</string>
    <string name="upload_media_from">Upload media from</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="circle">Circle</string>
    <string name="group">Group</string>
    <string name="cancel">Cancel</string>
    <string name="device">Device</string>
    <string name="admin">Admin</string>
    <string name="moderator">Moderator</string>
    <string name="user">User</string>
    <string name="read_only">Read-only</string>
    <string name="photos">Photos</string>
    <string name="loading">Loading</string>
    <string name="root_space_name">Circles</string>
    <string name="timelines_space_name">My Timelines</string>
    <string name="shared_circles">Shared Circles</string>
    <string name="photos_space_name">My Photo Galleries</string>
    <string name="groups_space_name">My Groups</string>
    <string name="peopel_space_name">People</string>
    <string name="known_users">Known users</string>
    <string name="suggestions">Suggestions</string>
    <string name="no_results">No results</string>
    <string name="enter_name_or_id">Enter name or userId</string>
    <string name="search_by_name_or_id">Search by name or userId</string>
    <string name="share">Share</string>
    <string name="rage_shake_report">Rageshake report</string>
    <string name="report_sent">Report sent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="report">Report</string>
    <string name="description">Description</string>
    <string name="describe_your_problem_here">Describe your problem here</string>
    <string name="save">Save</string>
    <string name="select_items_from_list_below">Select items from list below</string>
    <string name="passphrase_changed">Passphrase changed</string>
    <string name="remove">Remove</string>
    <string name="choose_gallery">Choose gallery</string>
    <string name="pick_media">Pick media</string>
    <string name="change_icon">Change icon</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="account">Account</string>
    <string name="deactivate_my_account">Deactivate my account</string>
    <string name="settings">Settings</string>
    <string name="version_format">Version %s</string>
    <string name="deactivate_message">This will make your account permanently unusable. You will not be able to log in, and no one will be able to re-register the same user lD. This will cause your account to leave all rooms it is participating in, and it will remove your account details from your identity server. This action is irreversible.</string>
    <string name="deactivate">Deactivate</string>
    <string name="you_are_signed_out">You’re signed out</string>
    <string name="add">Add</string>
    <string name="access_level">Access level</string>
    <string name="set_access_level">Set access level</string>
    <string name="invite">Invite</string>
    <string name="share_room">Share room</string>
    <string name="share_url">Share url</string>
    <string name="invite_to_format">Invite to %s</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="group_members_format">%s members</string>
    <string name="followers_for_format">Followers for %s</string>
    <string name="current_members">Current members</string>
    <string name="invited_users">Invited users</string>
    <string name="banned_users">Banned users</string>
    <string name="room_not_found">Room is not found</string>
    <string name="state_events">State events</string>
    <string name="push_notifications">Push notifications</string>
    <string name="configure_group">Configure group</string>
    <string name="filter_timelines">Filter timelines</string>
    <string name="configure_gallery">Configure gallery</string>
    <string name="manage_members">Manage members</string>
    <string name="my_followers">My followers</string>
    <string name="followers">Followers</string>
    <string name="people_i_m_following">People I\'m following</string>
    <string name="invite_members">Invite members</string>
    <string name="leave_group">Leave group</string>
    <string name="leave_gallery">Leave gallery</string>
    <string name="leave_room">Leave room</string>
    <string name="delete">Delete</string>
    <string name="banned">Banned</string>
    <string name="invited">Invited</string>
    <string name="resend">Resend</string>
    <string name="ban">Ban</string>
    <string name="ban_user">Ban user</string>
    <string name="ban_user_message">Are you sure you want to ban this user?\n\nUser will not be able to join again.</string>
    <string name="unban_user">Unban user</string>
    <string name="unban_user_message">Are you sure you want to unban this user?\n\nUser will be able to join again.</string>
    <string name="unban">Unban</string>
    <string name="cancel_invite">Cancel invite</string>
    <string name="cancel_invite_message">Are you sure you want to cancel the invite for this user?</string>
    <string name="resend_invite">Resend invite</string>
    <string name="resend_invite_message">Are you sure you want to cancel and resend the invite for this user?</string>
    <string name="remove_user">Remove user</string>
    <string name="remove_user_message">Are you sure you want to remove this user?</string>
    <string name="remove_user_in_room_message">Are you sure you want to remove this user?\n\nUser still be able to join by invite.</string>
    <string name="leave">Leave</string>
    <string name="leave_group_message">Are you sure you want to leave this group?\n\nThis group is not public. You will not be able to rejoin without an invite.</string>
    <string name="leave_gallery_message">Are you sure you want to leave this gallery?\n\nThis gallery is not public. You will not be able to rejoin without an invite.</string>
    <string name="delete_circle">Delete circle</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_gallery">Delete gallery</string>
    <string name="delete_circle_message">Are you sure you want to remove this circle?</string>
    <string name="delete_group_message">Are you sure you want to remove this group?</string>
    <string name="configure_circle">Configure circle</string>
    <string name="configure_room_format">Configure %s</string>
    <string name="invite_followers">Invite followers</string>
    <string name="select_another_admin_message">You must select another member as an \"Admin\" to be able to leave this room.</string>
    <string name="updated">Updated</string>
    <string name="last_updated_formatter">Last updated %s</string>
    <string name="delete_gallery_message">Are you sure you want to remove this gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="invited_by_format">Invited by %s</string>
    <string name="encryption_warning">NOTE: name and cover image are not encrypted</string>
    <string name="name">name</string>
    <string name="create_new_room_format">Create new %s</string>
    <string name="group_topic_optional">Group topic (optional)</string>
    <string name="remove_from_this_circle_but_do_not_unfollow">Remove from this circle, but do not unfollow</string>
    <string name="unfollow_completely_remove_from_all_circles">Unfollow completely (remove from all circles)</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="create">Create</string>
    <string name="show">Show</string>
    <string name="room_invitations_and_requests_format">%s invitations and requests</string>
    <string name="room_requests_for_invitation_format">%s requests for invitation</string>
    <string name="no_new_invitations_format">You don\'t have any %s</string>
    <string name="following">Following</string>
    <string name="others">Others</string>
    <string name="other_known_users">Other known users</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollow_circle">Unfollow Circle</string>
    <string name="unfollow_user_timeline">Are you sure you want to unfollow this timeline?</string>
    <string name="ignore">Ignore</string>
    <string name="ignore_user_message">Ignoring this user will remove their messages from rooms you share.</string>
    <string name="request_sent">Request sent</string>
    <string name="failed_to_request_invitation">Failed to request invitation</string>
    <string name="unignore">Unignore</string>
    <string name="unignore_and_restart">Unignore and restart</string>
    <string name="unignore_message">Unignoring this user will show all messages from them again.\n\nNote that to take affect this action requires to restart the app and sync the session.</string>
    <string name="user_ignored">User ignored</string>
    <string name="not_following_any_circles_format">Not following any Circles for %s</string>
    <string name="requests_to_follow_you">requests to follow you</string>
    <string name="invites_you_to_connect">invites you to connect</string>
    <string name="invites">Invites</string>
    <string name="requests">Requests</string>
    <string name="follow">Follow</string>
    <string name="default_user_role">Default user role</string>
    <string name="select_timelines_format">Select timelines which posts you want to read in %s</string>
    <string name="select_all">Select all</string>
    <string name="mutual_friends">Mutual friends</string>
    <string name="ignored">Ignored</string>
    <string name="whats_new_in_format">What\'s new in %s</string>
    <string name="got_it">Got it</string>
    <string name="notification_ticker_text_group">%1$s: %2$s %3$s</string>
    <string name="notification_room_notifications">Room notifications</string>
    <string name="notification_invitations">Invitations</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_new_messages">New Messages</string>
    <string name="action_mark_room_read">Mark as read</string>
    <string name="notification_initial_sync">Initial Sync…</string>
    <string name="notification_listening_for_notifications">Listening for notifications</string>
    <string name="settings_troubleshoot_test_system_settings_title">System Settings</string>
    <string name="settings_troubleshoot_test_system_settings_success">Notifications are enabled in the system settings.</string>
    <string name="settings_troubleshoot_test_system_settings_failed">Notifications are disabled in the system settings.\nPlease check system settings.</string>
    <string name="invite_to_follow_me">Invite to follow me</string>
    <string name="select_circles_to_which_you_want_to_invite_format">Select circles to which you want to invite %s</string>
    <string name="create_your_first_circle_to_be_able_to_invite">Create your first Circle to be able to invite</string>
    <string name="requests_for_invitation">Request for invitation</string>
</resources>