<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/filter_timelines"
        app:titleCentered="true"
        app:titleMarginEnd="72dp">

        <org.futo.circles.core.view.LoadingButton
            android:id="@+id/btnSave"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/save"
            android:textSize="13sp"
            app:textPadding="1dp" />

    </com.google.android.material.appbar.MaterialToolbar>


    <View
        android:id="@+id/toolbarDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/tvSubtitle"
        style="@style/subheadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:text="@string/select_timelines_format" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectAll"
        style="@style/NegativeButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_all"
        android:textSize="12sp" />


    <org.futo.circles.core.view.LoadingRecyclerView
        android:id="@+id/rvTimelines"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp" />


</LinearLayout>