<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_cool_200"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/DialogFragmentToolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/default_background"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/grey_cool_1100"
        app:subtitleCentered="true"
        app:titleCentered="true" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCover"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundIcon"
                tools:src="@color/blue" />

            <org.futo.circles.core.view.SettingsGroupLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:groupName="@string/notifications">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lPushNotifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_background"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPushNotifications"
                        style="@style/settingMenuItem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:drawablePadding="8dp"
                        android:focusable="false"
                        android:text="@string/push_notifications"
                        app:drawableStartCompat="@drawable/ic_manage_notifications"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/svPushNotifications"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/svPushNotifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:checked="true"
                        android:clickable="false"
                        android:focusable="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </org.futo.circles.core.view.SettingsGroupLayout>


            <org.futo.circles.core.view.SettingsGroupLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:groupName="@string/room_settings">

                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:optionIcon="@drawable/ic_share"
                    app:optionName="@string/share" />

                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vStateEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:optionIcon="@drawable/ic_info"
                    app:optionName="@string/state_events" />


                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vConfigure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasDivider="false"
                    app:optionIcon="@drawable/ic_settings"
                    app:optionName="@string/configure_group" />

            </org.futo.circles.core.view.SettingsGroupLayout>


            <org.futo.circles.core.view.SettingsGroupLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:groupName="@string/members">

                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vManageMembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:optionIcon="@drawable/ic_round_people"
                    app:optionName="@string/manage_members" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <org.futo.circles.core.view.SettingsMenuItemView
                        android:id="@+id/vKnockRequests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:optionIcon="@drawable/ic_knock_requests"
                        app:optionName="@string/requests_for_invitation"
                        tools:ignore="RtlSymmetry" />

                    <org.futo.circles.core.view.NotificationCounterView
                        android:id="@+id/ivKnocksCount"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="36dp"
                        android:visibility="gone"
                        app:notificationCircleBackground="@android:color/holo_red_dark"
                        tools:visibility="visible" />

                </FrameLayout>


                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vInviteMembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasDivider="false"
                    app:optionIcon="@drawable/ic_invite"
                    app:optionName="@string/invite_members" />

            </org.futo.circles.core.view.SettingsGroupLayout>


            <org.futo.circles.core.view.SettingsGroupLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:groupName="@string/leave">

                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vLeave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:optionIcon="@drawable/ic_logout"
                    app:optionName="@string/leave_group" />

                <org.futo.circles.core.view.SettingsMenuItemView
                    android:id="@+id/vDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasDivider="false"
                    app:optionIcon="@drawable/ic_delete"
                    app:optionName="@string/delete" />


            </org.futo.circles.core.view.SettingsGroupLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>