<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/DialogFragmentToolbarTitle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/invite_to_follow_me"
        app:titleCentered="true"
        app:titleMarginEnd="72dp">


        <ImageView
            android:id="@+id/btnCreateCircle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="18dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="6dp"
            android:src="@drawable/ic_create" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="@string/select_circles_to_which_you_want_to_invite_format" />

    <View
        android:id="@+id/titleDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="8dp"
        android:background="@color/grey_cool_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <FrameLayout
        android:id="@+id/lContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnInvite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDivider" />

    <TextView
        android:id="@+id/tvCreateCircle"
        style="@style/Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="36dp"
        android:text="@string/create_your_first_circle_to_be_able_to_invite"
        android:textColor="@color/grey_cool_600"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <org.futo.circles.core.view.LoadingButton
        android:id="@+id/btnInvite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/invite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/selectCircleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTitle,titleDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>